# sxope-ml-hcc-prediction

./: .env.gke.production  .env.gke.staging  .env.local  .env.production  .env.staging  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  predict.sh  pyproject.toml
config/: model.yml
container_tools/: initialization.sh  predict_hist.sh
notebooks/: data_upload.ipynb  feature_selection.ipynb  general_scheme.ipynb  member_selections.ipynb
src/sxope_ml_hcc_prediction/: __init__.py  app_config.py  inference.py  run_initialization.py  train.py
src/sxope_ml_hcc_prediction/dataset/: config.py  dataset.py
src/sxope_ml_hcc_prediction/models/: config.py  model.py  models_torch.py  unified_db.py
src/sxope_ml_hcc_prediction/utils/: early_stoppers.py  handy_funcs.py  scores.py
tests/data_build/: test_data_build.py
tests/train/: test_train.py
